--- a/Menu_Siglo21/Views/MenuPedidos.xaml
+++ b/Menu_Siglo21/Views/MenuPedidos.xaml
@@ -3,11 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:Menu_Siglo21.Views"
              mc:Ignorable="d"
              x:Class="Menu_Siglo21.Views.MenuPedidos"
              BindingContext="{Binding Main, Source={StaticResource Locator}}">
   <!--Pages can be added as references or inline-->
-  <ContentPage Title="Platos" />
-  <ContentPage Title="Bebidas" />
-  <ContentPage Title="Paga Tu Cuenta" />
+    <local:PlatosPage></local:PlatosPage>
+    <local:BarPage></local:BarPage>
+    <local:PagarCuentaPage></local:PagarCuentaPage>
 </TabbedPage>
